// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeopleScreen mapStateToProps should provide necessary props for Casey with no steps 1`] = `
Object {
  "hasNoContacts": true,
  "isJean": false,
  "items": Array [
    Object {
      "id": "me person",
    },
  ],
}
`;

exports[`PeopleScreen mapStateToProps should provide the necessary props for Casey 1`] = `
Object {
  "hasNoContacts": false,
  "isJean": false,
  "items": Array [
    Object {
      "id": 1,
      "type": "person",
    },
    Object {
      "id": 2,
      "type": "person",
    },
    Object {
      "id": 3,
      "type": "person",
    },
  ],
}
`;

exports[`PeopleScreen mapStateToProps should provide the necessary props for Jean 1`] = `
Object {
  "hasNoContacts": false,
  "isJean": true,
  "items": Array [
    Object {
      "id": "personal",
      "people": Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ],
      "type": "organization",
    },
    Object {
      "id": 10,
      "name": "org 1",
      "people": Array [
        Object {
          "id": 11,
          "type": "person",
        },
      ],
      "type": "organization",
    },
    Object {
      "id": 20,
      "name": "org 2",
      "people": Array [
        Object {
          "id": 21,
          "type": "person",
        },
      ],
      "type": "organization",
    },
  ],
}
`;

exports[`PeopleScreen mapStateToProps should provide the necessary props for Jean with no contacts 1`] = `
Object {
  "hasNoContacts": true,
  "isJean": true,
  "items": Array [
    Object {
      "id": "personal",
      "people": Array [
        Object {
          "id": "me person",
        },
      ],
      "type": "organization",
    },
  ],
}
`;

exports[`PeopleScreen renders correctly as Casey 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    title="PEOPLE"
  />
  <Translate(PeopleList)
    items={
      Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={false}
  />
</Component>
`;

exports[`PeopleScreen renders correctly as Jean 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="searchIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    shadow={false}
    title="PEOPLE"
  />
  <Translate(PeopleList)
    items={
      Array [
        Object {
          "id": "personal",
          "people": Array [
            Object {
              "id": 1,
              "type": "person",
            },
            Object {
              "id": 2,
              "type": "person",
            },
            Object {
              "id": 3,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 10,
          "name": "org 1",
          "people": Array [
            Object {
              "id": 11,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 20,
          "name": "org 2",
          "people": Array [
            Object {
              "id": 21,
              "type": "person",
            },
          ],
          "type": "organization",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={true}
  />
</Component>
`;

exports[`PeopleScreen renders empty correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    title="PEOPLE"
  />
  <Translate(PeopleList)
    items={
      Array [
        Object {
          "id": "me person",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={false}
  />
  <Connect(Translate(TakeAStepWithSomeoneButton)) />
</Component>
`;
